k8s/base/booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: skybook
spec:
  type: ClusterIP
  selector:
    app: booking-service
  ports:
    - port: 8083
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: skybook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8083"
    spec:
      containers:
        - name: booking-service
          image: ghcr.io/praveencloudlab/skybook-booking-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          volumeMounts:
            - name: otel
              mountPath: /otel
              readOnly: true
          startupProbe:
            httpGet: { path: /actuator/health/liveness, port: 8083 }
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8083 }
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8083 }
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests: { memory: "384Mi", cpu: "150m" }
            limits: { memory: "768Mi" }
      volumes:
        - name: otel
          emptyDir: {}
